# JakobSpeciale

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  main.py  pyproject.toml
Examples/: GALLERY_HEADER.rst
Examples/example_integration/: README.rst  compute.py  plot_integration.py
Exercises/: GALLERY_HEADER.rst  Todos.md
Exercises/exercise_a/: README.rst  compute_solutions.py  plot_ex_a.py
Exercises/exercise_b/: README.rst  compute.py  plot_ex_b.py
Exercises/exercise_c/: README.rst  compute_convergence.py  compute_eigenvalues.py  plot_convergence.py  plot_eigenvalues.py  plot_solutions.py
Exercises/exercise_d/: README.rst  compute.py  plot_ex_d.py
Exercises/exercise_e/: README.rst  compute.py  plot_ex_e.py
Exercises/exercise_f/: README.rst  compute.py  plot_invariants.py  plot_solution.py
Exercises/exercise_g/: README.rst  compute_scalability.py  compute_work_precision.py  plot_scalability.py  plot_work_precision.py  profile_soliton.py
Exercises/exercise_h/: README.rst  compute.py  plot_ex_h.py
data/: README.md
data/A2/ex_a/: convergence.parquet  data.parquet
data/A2/ex_b/: convergence_r.parquet  convergence_theta.parquet  solution.parquet
data/A2/ex_c/: eigenvalue_scaling.parquet  eigenvalue_stability.parquet  kdv_spatial_convergence.parquet  kdv_temporal_convergence.parquet
data/A2/ex_d/: domain_errors.parquet  domain_quantities.parquet  nodes_errors.parquet  nodes_quantities.parquet
data/A2/ex_e/: conservation.parquet  convergence.parquet  spectra.parquet
data/A2/ex_f/: kdv_two_soliton.parquet
data/A2/ex_g/: scalability_timing.parquet  work_precision.parquet
data/A2/ex_h/: solution.parquet  spatial_convergence.parquet  temporal_convergence.parquet
data/example_integration/: integration_results.parquet
docs/: Makefile
docs/source/: api_reference.rst  conf.py  index.rst  index_latex.rst  latex_conf.py  sg_execution_times.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: base.rst  class.rst
docs/source/example_gallery/: index.rst  searchindex.db
docs/source/exercise_gallery/: index.rst  searchindex.db  sg_execution_times.rst
lecture_notes/: Assignment2_2025.txt
src/: line_profiler.py
src/numutils/: __init__.py  integration.py  linalg.py
src/numutils/utils/: __init__.py  plotting.py
src/spectral/: __init__.py  bvp.py  polynomial.py  spectral.py  tdp.py
src/spectral/utils/: io.py
src/styles/: ana.mplstyle
src/utils/: __init__.py  formatting.py  norms.py  plotting.py
(+143 files in other folders)
